--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -3,26 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Document</title>
     <link rel="stylesheet" href="/styles/articles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    <h1>Our articles</h1>
-    <ol class="list">
+    <div class="container">
+        <h1>Our articles</h1>
+    <ol class="list list-group">
     
     </ol>
 
 
 
-    <label for="author">Choose author:</label>
-    <select name="authorName" id="author" class="author">
+    <label class="mt-3" for="author">Choose author:</label>
+    <select name="authorName" id="author" class="author form-select" aria-label="Default select example">
        
     </select>
-    <div class="form">
+    <div class="form d-flex flex-column">
+        <input type="text" class="add_title" placeholder="Write the name of article...">
         <input type="text" class="add_text" placeholder="Write your articles...">
         <button class="save">Save</button>
+    </div>
     </div>
     <script src="/js/articles.js"></script>
 </body>
